--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <tr>
             <td></td>
             <td><p><strong><h1 class="orange">I'm </a></h1></strong></p> 
-            <p><strong><h1 ><a class="white" href="http://127.0.0.1:5501/image/jp1.html">Jotiraj Patil</a></h1></strong></p>
+            <p><strong><h1 ><a class="white" href="http://127.0.0.1:5501/Resume/jp1.html">Jotiraj Patil</a></h1></strong></p>
             <p><h1 class="green">a Web Developer.</h1></p>
             </td>
         </tr>
