--- a/jp1.html
+++ b/jp1.html
@@ -21,7 +21,7 @@
  <p> <strong> Hard working & Ambitious</strong></p>
  <ul>
     <li><a href="#education">Education</a></li>
-    <li><a href="">Project</a> </li>
+    <li><a href="#Project">t</a></li>
     <li><a href="#contact">Contact</a></li>
     <li>contact</li>
 </ul>
@@ -68,6 +68,17 @@ I am a student who lives in kolhapur city with my family. All my friends are fro
 
 </table>
 <hr>
+    <section id ="Project">
+ <h3> <a class ="blue"href="http://127.0.0.1:5501/Resume/project.html">Project</a></h3>
+  <p>Expense Tracker:
+    This simple project keeps track of income and expenses. We will add, remove and save items to/from local storage.
+    Expense Tracker System is a system which will keep a track of Income-Expense of a person on a day to day
+     basics.
+</p>
+
+</section>
+    
+    
 <table>
     <tr>
        <td>Web Development </td>
